--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 				<td> Jan 27 </td>
 				<td> 3:30-4:30pm  </td> <!-- time -->
 				<td> Umesh</td>
-                <td> <a href="" target="_blank">Hidden Markov models for the stimulus-response relationships of multistate neural systems</a>
+                <td> <a href="https://direct.mit.edu/neco/article-abstract/23/5/1071/7663/Hidden-Markov-Models-for-the-Stimulus-Response" target="_blank">Hidden Markov models for the stimulus-response relationships of multistate neural systems</a>
                     <br>Escola et al. (Neural Computation 2011)
                     <br>
-                    <a href="" target="_blank">Unsupervised identification of the internal states that shape natural behavior</a>
+                    <a href="https://www.nature.com/articles/s41593-019-0533-x" target="_blank">Unsupervised identification of the internal states that shape natural behavior</a>
                     <br>Calhoun et al. (Nat Neuro 2019)
                 </td>
 
