--- a/index.html
+++ b/index.html
@@ -118,18 +118,26 @@
 				<th style="width: 70%;">Reading   </th>
 			</tr>
 
+            <tr>
+				<td> Feb 3 </td>
+				<td> 3:30-4:30pm  </td> <!-- time -->
+				<td> Sam Reifenstein</td>
+                <td> <a href="https://arxiv.org/abs/2008.07669" target="_blank">HiPPO: Recurrent Memory with Optimal Polynomial Projections</a>
+                    <br>Gu, Dao et al. (NeurIPS 2020)
+                </td>
+            </tr>
+
 			<tr>
 				<td> Jan 27 </td>
 				<td> 3:30-4:30pm  </td> <!-- time -->
-				<td> Umesh</td>
+				<td> Umesh Singla</td>
                 <td> <a href="https://direct.mit.edu/neco/article-abstract/23/5/1071/7663/Hidden-Markov-Models-for-the-Stimulus-Response" target="_blank">Hidden Markov models for the stimulus-response relationships of multistate neural systems</a>
                     <br>Escola et al. (Neural Computation 2011)
                     <br>
                     <a href="https://www.nature.com/articles/s41593-019-0533-x" target="_blank">Unsupervised identification of the internal states that shape natural behavior</a>
                     <br>Calhoun et al. (Nat Neuro 2019)
                 </td>
-
-
+            </tr>
 		</tbody>
 		</table>
 
