add next week paper

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
 			</tr>
 
             <tr>
+				<td> Feb 10 </td>
+				<td> 3:30-4:30pm  </td> <!-- time -->
+				<td> Thelonious A Cooper </td>
+                <td> <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.45.712" target="_blank">Geometry from a Time Series</a>
+                    <br>Packard et al. (Phys Rev Lett 1980)
+                </td>
+            </tr>
+
+            <tr>
 				<td> Feb 3 </td>
 				<td> 3:30-4:30pm  </td> <!-- time -->
 				<td> Sam Reifenstein</td>
