--- a/index.html
+++ b/index.html
@@ -119,9 +119,44 @@
 			</tr>
 
             <tr>
+				<td> Mar 11 </td>
+				<td> 4-5pm  </td> <!-- time -->
+				<td> TBD </td>
+                <td> <a href="https://direct.mit.edu/neco/article-abstract/25/3/626/7854/Opening-the-Black-Box-Low-Dimensional-Dynamics-in?redirectedFrom=PDF" target="_blank">Opening the Black Box: Low-Dimensional Dynamics in High-Dimensional Recurrent Neural Networks</a>
+                    <br>Sussillo & Barak, Neural Computation (2013)
+                </td>
+            </tr>
+
+            <tr>
+				<td> Mar 4 </td>
+				<td> 4-5pm  </td> <!-- time -->
+				<td> TBD </td>
+                <td> <a href="https://www.nature.com/articles/s41593-022-01088-4" target="_blank">The role of population structure in computations through neural dynamics</a>
+                    <br>Dubreuil, Valente et al. Nat Neuro (2022)
+                </td>
+            </tr>
+
+            <tr>
+				<td> Feb 25 </td>
+				<td> 4-5pm  </td> <!-- time -->
+				<td> - </td>
+                <td> Canceled
+                </td>
+            </tr>
+
+            <tr>
+				<td> Feb 18 </td>
+				<td> 4-5pm  </td> <!-- time -->
+				<td> Sam Reifenstein</td>
+                <td> <a href="https://www.cell.com/neuron/fulltext/S0896-6273%2818%2930543-9" target="_blank">Linking connectivity, dynamics, and computations in low-rank recurrent neural networks</a>
+                    <br>Mastrogiuseppe et al. Neuron (2018)
+                </td>
+            </tr>
+
+            <tr>
 				<td> Feb 10 </td>
 				<td> 3:30-4:30pm  </td> <!-- time -->
-				<td> Thelonious A Cooper </td>
+				<td> - </td>
                 <td> <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.45.712" target="_blank">Geometry from a Time Series</a>
                     <br>Packard et al. (Phys Rev Lett 1980)
                 </td>
